--- a/angular.json
+++ b/angular.json
@@ -28,8 +28,13 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles/styles.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/styles/"
+              ]
+            },
             "scripts": []
           },
           "configurations": {
@@ -123,6 +128,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "intellectika-test"
+    }
+  },
+  "defaultProject": "intellectika-test",
+  "cli": {
+    "analytics": false
+  }
 }
