--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,10 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@interfaces/*": ["src/app/interfaces/*"],
+    }
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
